test/types/file/freadNoFloat.good
freadNoFloat.chpl:5: error: halt reached - ***Error: No real was read***
